--- a/src/index.css
+++ b/src/index.css
@@ -1,45 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
 
-:root{
+:root {
   --primary: #efb6b2;
   --secondary: #4e4e4e;
   --error: #ff4a4a;
 }
 
 /* base styles & title */
-body{
+body {
   font-family: "Noto Serif";
   color: var(--secondary);
 }
-.App{
+.app {
   max-width: 960px;
   margin: 0 auto;
 }
-.title h1{
+.title h1 {
   color: var(--primary);
   font-size: 1.2rem;
   letter-spacing: 2px;
   font-weight: normal;
 }
-.title h2, .title p{
+.title h2, .title p {
   text-align: center;
 }
-.title h2{
+.title h2 {
   margin-top: 60px;
   font-size: 2.6rem;
 }
+.title div {
+  display: flex;
+  justify-content: space-between;
+}
+.title div h4 {
+  color: var(--secondary);
+}
+.title > div h4:hover {
+  color: var(--primary);
+  cursor: pointer;
+  transition: color 1s;
+}
 
 /* upload form styles */
-form{
+form {
   margin: 30px auto 10px;
   text-align: center;
 }
-label input{
+label input {
   height: 0;
   width: 0;
   opacity: 0;
 }
-label{
+label {
   display: block;
   width: 30px;
   height: 30px;
@@ -52,33 +64,33 @@ label{
   font-size: 24px;
   cursor: pointer;
 }
-label:hover{
+label:hover {
   background: var(--primary);
   color: white;
 }
-.output{
+.output {
   height: 60px;
   font-size: 0.8rem;
 }
-.error{
+.error {
   color: var(--error);
 }
 
 /* progress bar styles */
-.progress-bar{
+.progress-bar {
   height: 5px;
   background: var(--primary);
   margin-top: 20px;
 }
 
 /* image grid styles */
-.img-grid{
+.img-grid {
   margin: 20px auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 40px;
+  grid-gap: 1rem;
 }
-.img-wrap{
+.img-wrap {
   overflow: hidden;
   height: 0;
   padding: 50% 0;
@@ -86,17 +98,18 @@ label:hover{
   position: relative;
   opacity: 0.8;
 }
-.img-wrap img{
+.img-wrap img {
   min-width: 100%;
   min-height: 100%;
   max-width: 150%;
   position: absolute;
+  cursor: pointer;
   top: 0;
   left: 0;
 }
 
 /* modal styles */
-.backdrop{
+.backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -104,11 +117,59 @@ label:hover{
   height: 100%;
   background: rgba(0,0,0,0.5);
 }
-.backdrop img{
+.backdrop img {
   display: block;
   max-width: 60%;
   max-height: 80%;
   margin: 60px auto;
   box-shadow: 3px 5px 7px rgba(0,0,0,0.5);
   border: 3px solid white;
+}
+
+/* spinner styles */
+.spinner {
+  margin: 60px auto;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  text-align: center;
+  animation: rotate 2.0s infinite linear;
+}
+
+.dot1, .dot2 {
+  width: 60%;
+  height: 60%;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  background-color: var(--primary);
+  border-radius: 100%;
+  animation: bounce 2.0s infinite ease-in-out;
+}
+
+.dot2 {
+  top: auto;
+  bottom: 0;
+  animation-delay: -1.0s;
+}
+
+@keyframes rotate { 
+  100% { 
+    transform: rotate(360deg);  
+  }
+}
+
+@keyframes bounce {
+  0%, 100% { 
+    transform: scale(0.0);
+  } 50% { 
+    transform: scale(1.0);
+  }
+}
+
+/* mobile breakpoints */
+@media (max-width: 375px) {
+  .img-grid{
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
